#53 a large search-service cleanup